<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/widget_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="14dp"
        android:paddingVertical="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_prayer_asr" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/prayer_asr"
                android:textColor="@color/widget_on_surface"
                android:textFontWeight="600"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/widget_preview_remaining"
                android:textColor="@color/widget_on_surface"
                android:textFontWeight="700"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/prayer_dhuhr"
                    android:textColor="@color/widget_on_surface_variant"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:paddingTop="1dp"
                    android:text="12:17"
                    android:textColor="@color/widget_on_surface"
                    android:textFontWeight="600"
                    android:textSize="11sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/prayer_asr"
                    android:textColor="@color/widget_on_surface_variant"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:paddingTop="1dp"
                    android:text="15:41"
                    android:textColor="@color/widget_on_surface"
                    android:textFontWeight="600"
                    android:textSize="11sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/prayer_maghrib"
                    android:textColor="@color/widget_on_surface_variant"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:paddingTop="1dp"
                    android:text="18:32"
                    android:textColor="@color/widget_on_surface"
                    android:textFontWeight="600"
                    android:textSize="11sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/prayer_isha"
                    android:textColor="@color/widget_on_surface_variant"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:paddingTop="1dp"
                    android:text="19:54"
                    android:textColor="@color/widget_on_surface"
                    android:textFontWeight="600"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
